test/good/arrays/for08.px

for x in [] do
    print x
