test/bad/loops/for23.px

for x in [0r] by 1.5 do
    skip
